# tiago_moveitpy

./: README.md  package.xml  setup.cfg  setup.py
launch/: plan.launch.py
tiago_moveitpy/: pick.py
