<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_moveitpy</name>
  <version>1.0.0</version>
  <description>Tiago MoveItPy boilerplate for Gazebo Harmonic</description>
  <maintainer email="opensource@aubrune.eu">Yoan Mollard</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tiago_moveit_config</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
